<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chefs_hat"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_pig"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_movie"
        android:contentDescription="@string/app_name"
        android:elevation="4dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_awoo"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_awoo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_title"
        android:textColor="@color/boulder"
        app:layout_constraintTop_toBottomOf="@id/img_pig"
        app:layout_constraintBottom_toTopOf="@id/txt_nothing"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_nothing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_subtitle"
        android:textColor="@color/boulder"
        app:layout_constraintTop_toBottomOf="@id/txt_awoo"
        app:layout_constraintBottom_toTopOf="@id/txt_description"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/boulder"
        android:text="@string/try_again"
        app:layout_constraintTop_toBottomOf="@id/txt_nothing"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:textSize="12sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>